fixed about-skills alignment

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -98,4 +98,8 @@
     display: flex;
     padding-bottom: 6rem;
   } 
+  .about-skills {
+      align-content: center;
+
+  }
 }
